--- a/css/styles.css
+++ b/css/styles.css
@@ -122,3 +122,12 @@ body{
   margin-top: 40px;
   font-size: 18px;
 }
+
+body {
+  line-height: 1.8;
+  letter-spacing: normal;
+}
+
+p {
+  line-height: 1.8;
+}
